fix code allongside swaggar ui
